# text-to-mp3

./: README.md  docker-compose.yml  fix_parts.py  flake.nix
backend/: pyproject.toml
backend/tests/: test_api_auth.py  test_api_jobs.py
k8s/: backend.yml  flower.yml  frontend.yml  ingress.yml  output-pvc.yml  redis.yml  secret.yml  worker.yml
