[project]
name = "audiobook"
version = "0.1.0"
description = "EPUB to audiobook converter — backend + worker"
requires-python = ">=3.11"
dependencies = [
    # API & task queue
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "celery[redis]>=5.4",
    "redis[hiredis]>=5.2",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.6",
    # EPUB parsing
    "beautifulsoup4>=4.12",
    "ebooklib>=0.18",
    "lxml>=5.3",
    "nltk>=3.9",
    "pillow>=11.0",
    # TTS
    "edge-tts>=6.1",
    # Audio processing
    "pydub>=0.25",
    "mutagen>=1.47",
    # Logging
    "structlog>=24.4",
    # Flower (Celery monitoring UI)
    "flower>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audiobook"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "httpx2>=0.28",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
